--- a/templates/playground.html
+++ b/templates/playground.html
@@ -17,12 +17,12 @@
     <script src="components/webcomponentsjs/webcomponents.min.js"></script>
     <script src="//www.google.com/jsapi"></script>
     <script src="//apis.google.com/js/api.js"></script>
-    <script src="vendor/realtime-client-utils.js"></script>
-    <script src="vendor/highlight.js"></script>
+    <script src="lib/realtime-client-utils.js"></script>
+    <script src="lib/highlight.js"></script>
 
     <!-- Components -->
-    <link rel="import" href="components/font-roboto/roboto.html" />
-    <link rel="import" href="components/elements/playground-app.html" />
+    <link rel="import" href="/components/font-roboto/roboto.html" />
+    <link rel="import" href="/elements/playground-app.html" />
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- Analytics -->
