--- a/templates/test.html
+++ b/templates/test.html
@@ -2,39 +2,30 @@
 <html>
   <head>
     <title>Realtime API Test Suite</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Load Styles -->
     <link href="css/testingStyles.css" rel="stylesheet" />
-    <link href='css/tommorrow-night-theme.css' rel='stylesheet' type='text/css'>
-
-    <!-- Components -->
-    <script src="components/webcomponentsjs/webcomponents.js"></script>
-    <link rel="import" href="components/paper-spinner/paper-spinner.html" />
-    <link rel="import" href="components/font-roboto/roboto.html" />
-    <link rel="import" href="components/paper-button/paper-button.html" />
-
-    <!-- JS -->
-    <script src="https://apis.google.com/js/api.js"></script>
-    <script src="tests/testDocument.js"></script>
-    <script src="vendor/realtime-client-utils.js"></script>
+    <link href='css/tommorrow-night-theme.css' rel='stylesheet' type='text/css' />
 
     <!-- Libraries -->
-    <script src="vendor/highlight.js"></script>
-    <script src="vendor/testingClass.js"></script>
-    <script src="vendor/testingLibrary.js"></script>
-
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="lib/realtime-client-utils.js"></script>
+    <script src="lib/testDocument.js"></script>
+    <script src="lib/highlight.js"></script>
+    <script src="lib/testingClass.js"></script>
+    <script src="lib/testingLibrary.js"></script>
   </head>
   <body onLoad='startRealtime()'>
     <div class="scrim hidden"></div>
     <div class="lightbox hidden">
       <h1>Please Authorize</h1>
-      <paper-button name="hi" id="authorize" onclick="manualAuthorize()">Authorize</paper-button>
+      <button id="authorize" onclick="manualAuthorize()">Authorize</button>
     </div>
     <script>
       window.testSuite = new FunctionalTesting('Google Drive Realtime API Test Suite');
       document.body.appendChild(testSuite.el);
-
+      
       window.util = new Utils({
         appId: '840867953062',
         clientId: '840867953062.apps.googleusercontent.com'
@@ -66,6 +57,15 @@
           document.body.querySelector('.lightbox').classList.add('hidden');
           util.createRealtimeFile('test-document', function (resp) {
             window.fileId = resp.result.id;
+              Movie2 = function () {};
+              Movie2.prototype = {
+                initialize: function (string) {
+                  this.name = string;
+                }
+              }
+              gapi.drive.realtime.custom.registerType(Movie2, 'DemoMovie');
+              Movie2.prototype.name = gapi.drive.realtime.custom.collaborativeField('name');
+              gapi.drive.realtime.custom.setInitializer(Movie2, Movie2.prototype.initialize);
             util.load(fileId, onFileLoaded, onInitializeFile);
           });
         }
@@ -84,6 +84,7 @@
         'collaborativeMapTests.js',
         'collaborativeStringTests.js',
         'collaboratorObjectTests.js',
+        'customObjectTests.js',
         'documentSaveStateChangedEventTests.js',
         // 'documentTests.js',
         // 'documentImportTests.js',
