--- a/elements/create-document.css
+++ b/elements/create-document.css
@@ -79,15 +79,15 @@
 /* Viewports > 600px */
 @media (min-width: 600px) {
   .icons {
-    width: 550px;
-    position: absolute;
-    left:calc(50% - 250px);
-    top:calc(50% - 175px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 505px;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
   }
 
   .create-document-jumbo-icon {
-    width: 250px;
-    height: 250px;
     display: inline-block;
     position: relative;
   }
