--- a/elements/local-document.css
+++ b/elements/local-document.css
@@ -66,20 +66,28 @@
     color: #fff;
     cursor: pointer;
   }
+
+  .top core-icon {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 10px;
+    top: 37px;
+  }
 }
 
 /* Viewports > 600px */
 @media (min-width: 600px) {
   .icons {
-    width: 550px;
-    position: absolute;
-    left:calc(50% - 250px);
-    top:calc(50% - 175px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 505px;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
   }
 
   .local-document-jumbo-icon {
-    width: 250px;
-    height: 250px;
     display: inline-block;
     position: relative;
   }
@@ -129,6 +137,14 @@
     border-radius: 25px;
     margin-left: -25px;
     margin-bottom: -25px;
+  }
+
+  .top core-icon {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    right: 10px;
+    top: 10px;
   }
 }
 
