--- a/elements/local-document.css
+++ b/elements/local-document.css
@@ -1,6 +1,5 @@
-
-/* Viewports < 600px */
-@media (max-width: 600px) {
+/* Viewports 700px */
+@media (max-width: 700px) {
   .icons {
     width: 100%;
     height: 150px;
@@ -76,15 +75,15 @@
   }
 }
 
-/* Viewports > 600px */
-@media (min-width: 600px) {
+/* Viewports > 700px */
+@media (min-width: 700px) {
   .icons {
     position: fixed;
     top: 50%;
     left: 50%;
-    width: 505px;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
+    width: 510px;
+    margin-top: -135px;
+    margin-left: -250px;
   }
 
   .local-document-jumbo-icon {
