--- a/components/core-drawer-panel/core-drawer-panel.html
+++ b/components/core-drawer-panel/core-drawer-panel.html
@@ -180,7 +180,8 @@ To position the drawer to the right, add `rightDrawer` attribute.
       disableSwipe: false,
 
       /**
-        
+        * If true, you can open the drawer from a swipe in the middle of the screen.
+        *
         @attribute swipeAnywhere
         @type boolean
         @default false
