fixed file references

--- a/templates/playground.html
+++ b/templates/playground.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <meta name="description"
       content="The Google Drive Realtime API Playground showcases and allows you to experiment with the Google Drive Realtime API." />
-    <meta name="theme-color" content="#5677FC">
     <meta name="keywords"
       content="OAuth, Google, drive, realtime, api, javascript, operational, transforms" />
     <title>Google Drive Realtime Playground</title>
@@ -18,12 +17,12 @@
     <script src="components/webcomponentsjs/webcomponents.min.js"></script>
     <script src="//www.google.com/jsapi"></script>
     <script src="//apis.google.com/js/api.js"></script>
-    <script src="vendor/realtime-client-utils.js"></script>
-    <script src="vendor/highlight.js"></script>
+    <script src="lib/realtime-client-utils.js"></script>
+    <script src="lib/highlight.js"></script>
 
     <!-- Components -->
     <link rel="import" href="components/font-roboto/roboto.html" />
-    <link rel="import" href="components/elements/playground-app.html" />
+    <link rel="import" href="elements/playground-app.html" />
     <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- Analytics -->
